# yolo_c-

./: CMakeLists.txt  readme.md  test.py
code/main/: main.cpp  main.hpp
code/realsense/: wrr.hpp
code/yolov5/: __init__.py  detect.py  rgn
code/yolov5/models/: common.py
code/yolov5/mypacks/: __init__.py  gmi.py
code/yolov5/utils/: dataloaders.py  torch_utils.py
lib/yolov5lib/: detect.py
